重构,降低代码耦合,修改文章目录样式bug....

--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -14,3 +14,4 @@
 <% } %>
 <%- partial('totop') %>
 <script src="<%- config.root %>js/totop.js"></script>
+<script src="<%- config.root %>js/share.js"></script>
