--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,7 +1,22 @@
 <!-- 是否开启微简历 -->
-<% var resume = true %>
-<% if(resume) {%>
+<% if(theme.resume) {%>
       <%- partial('_partial/resume', null, {cache: !config.relative_link}) %>
 <% } %>
-<%- partial('_partial/ds-recent-comments', null, {cache: !config.relative_link}) %>
+<% if(theme.recentComment) {%>
+     <div id="recentComments">
+        <%- partial('_partial/ds-recent-comments', null, {cache: !config.relative_link}) %>
+     </div>
+<% } %>
+
 <%- partial('_partial/archive', {pagination: 2, index: true}) %>
+
+<script>
+
+    $(function(){
+	    var width = document.body.scrollWidth;
+		if(width<=550){
+		    $("#recentComments").css("display","none");
+		}
+	})
+
+</script>
