--- a/source/css/_partial/main.styl
+++ b/source/css/_partial/main.styl
@@ -279,7 +279,8 @@
 		top: 20px;
 		overlay-x: hidden;
 		overflow-y: auto;
-		max-height: 200px;
+		min-height: 200px;
+		max-height: 300px;
 	}
 	.switch-part3{
 		left: 200%;
