--- a/source/css/_partial/toc.styl
+++ b/source/css/_partial/toc.styl
@@ -35,7 +35,7 @@
 		padding-bottom:3px;
 		vertical-align:middle;
     }
-	.toc li:hover {
+	.toc li a:hover {
 	    background-color:#f8f6f6;
 	}
     #toc ol {
