--- a/source/css/_partial/tagcloud.styl
+++ b/source/css/_partial/tagcloud.styl
@@ -237,9 +237,9 @@
         float: left;
         padding:0 5px 0px 10px;  
         position:relative;  
-        border-radius:0 5px 5px 0; 
+        border-radius:0 0px 0px 0;
         margin: 5px 9px 5px 8px;
-        font-family: alluraregular;
+        /*font-family: alluraregular;*/
         &:hover{
             opacity: 0.8;
         }
