调整分享组件(手机端不显示,加入微信分享)

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -59,17 +59,19 @@
                                             <% } %>
             </div>
             <% if (!index && theme.baidushare){ %>
-                <div id="socialShare" style="margin-left:40px;">
+                <div id="socialShare" style="margin-left:40px;display:none;">
                 </div>
                 <script>
                     $(function() {
-
-                        $("#socialShare").socialShare({
-                            content: 'Nice!不错的资源...',
-                            url: window.location.href,
-                            titile: '<%post.title%>'
-                        });
-
+                        var width = document.body.scrollWidth;
+                        if (width > 550) {
+                            $("#socialShare").css("display", "block");
+                            $("#socialShare").socialShare({
+                                content: 'Nice!不错的资源...',
+                                url: window.location.href,
+                                titile: '<%post.title%>'
+                            });
+                        }
                     });
                 </script>
                 <% } %>
