--- a/layout/_partial/ds-recent-comments.ejs
+++ b/layout/_partial/ds-recent-comments.ejs
@@ -1,12 +1,13 @@
 <style>
     #ds-recent-comments {
-        background: #fefefe none repeat scroll 0 0;
-        border: 1px solid #ddd;
-        border-radius: 2px;
+        background: rgba(0,0,0,0.1);
+        border: 0px solid #ddd;
+        border-radius: 0px;
         box-shadow: 0 1px 3px #b8b9b9;
+		color:#FFFFFF;
     }
     #ds-recent-comments:hover {
-        background-color: #f7f7f7;
+       /*background-color: #f7f7f7;*/
     }
     #ds-recent-comments li.ds-comment {
         font-size: 13px;
@@ -40,7 +41,7 @@
         padding-left: 48px !important;
     }
 </style>
-<ul class="ds-recent-comments" id="ds-recent-comments" data-num-items="1" data-show-avatars="1" data-show-time="0" data-show-admin="0" data-excerpt-length="30" style="height:auto;width:240px;position:fixed;top:80px;right:140px;z-index:9999;"></ul>
+<ul class="ds-recent-comments" id="ds-recent-comments" data-num-items="1" data-show-avatars="1" data-show-time="0" data-show-admin="0" data-excerpt-length="30" style="height:auto;width:240px;position:fixed;top:80px;right:140px;z-index:9999;display:none"></ul>
 <!--多说js加载开始，一个页面只需要加载一次 -->
 <script type="text/javascript">
     var duoshuoQuery = {
@@ -56,4 +57,5 @@
     })(
         console.info($("#ds-recent-comments a"))
     );
+	$("#ds-recent-comments").fadeIn(2500);
 </script>
