--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -30,7 +30,7 @@
     <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
   <%- css('css/style') %>
-  <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
-  <script src="http://kiritor.github.io//js/jquery.nicescroll.js"></script>
-
+  <script src="/js/jquery1.8.2.min.js"></script>
+  <script src="/js/jquery.nicescroll.js"></script>
+  <script src="/js/jquery.qrcode.min.js"></script>
 </head>
