--- a/source/css/_partial/tagcloud.styl
+++ b/source/css/_partial/tagcloud.styl
@@ -231,15 +231,17 @@
         text-decoration:none;  
         font-weight: normal;
         font-size:10px;  
-        color:#fff;   
+        color:#ffffff; 
+		
+		
         height:18px;  
         line-height:18px;  
         float: left;
         padding:0 5px 0px 10px;  
         position:relative;  
-        border-radius:0 5px 5px 0; 
+        border-radius:0 2px 2px 0; 
         margin: 5px 9px 5px 8px;
-        font-family: alluraregular;
+        /*font-family: alluraregular;*/
         &:hover{
             opacity: 0.8;
         }
