--- a/source/css/_partial/share.styl
+++ b/source/css/_partial/share.styl
@@ -46,19 +46,19 @@
     border-radius: 50%;
 }
 .socialShare .msb_network_button.sina {
-    background: url(/img/social.png) no-repeat -130px -87px;
+    background: url(../img/social.png) no-repeat -130px -87px;
 }
 .socialShare .msb_network_button.tQQ {
-    background: url(/img/social.png) no-repeat -185px -20px;
+    background: url(../img/social.png) no-repeat -185px -20px;
 }
 .socialShare .msb_network_button.qZone {
-    background: url(/img/social.png) no-repeat -73px -20px;
+    background: url(../img/social.png) no-repeat -73px -20px;
 }
 .socialShare .msb_network_button.douban {
-    background: url(/img/social.png) no-repeat -130px -151px;
+    background: url(../img/social.png) no-repeat -130px -151px;
 }
 .socialShare .msb_network_button.weixin {
-    background: url(/img/social.png) no-repeat -73px -87px;
+    background: url(../img/social.png) no-repeat -73px -87px;
 }
 .socialShare .msb_network_button:hover {
     transition: -moz-transform 2s ease-out 0s;
