--- a/source/css/_partial/share.styl
+++ b/source/css/_partial/share.styl
@@ -4,12 +4,14 @@
     width: 54px;
     height: 54px;
     position: relative;
+	line-height:54px;
     z-index: 1;
 }
 .socialShare .msb_main {
     display: block;
     width: 46px;
     height: 46px;
+	line-height:46px;
     position: absolute;
     top: 0;
     left: 0;
@@ -65,15 +67,16 @@
     border: 6px solid #eee;
 }
 .wemcn {
-    width: 54px;
-    height: 54px;
+    width: 64px;
+    height: 64px;
     display: none;
     background: #fff none repeat scroll 0 0;
     border: 0;
 }
 .ewmDiv {
     float: left;
-    width: 48px;
+    width: 60px;
+	height: 60px;
 	border: 6px solid #f5f5f5;
 }
 .ewmDiv:hover {
