--- a/source/css/_partial/toc.styl
+++ b/source/css/_partial/toc.styl
@@ -4,14 +4,14 @@
         right:10px;
         border-top-left-radius: 50%;
         border-bottom-left-radius: 50%;
-        height: 30px;
-        background-color:#C3C3FF;
-        width: 30px;
+        height: 26px;
+        background-color:#2ec7e3;
+        width: 26px;
         text-align:right;
-        padding-right:6px;
-        line-height:30px;
+        padding-right:4px;
+        line-height:26px;
         color:#ffffff;
-        font-size:12px;
+        font-size:10px;
         font-family:'Micosoft YaHei';
         z-index: 9999;
         cursor:pointer;
@@ -67,7 +67,8 @@
         padding-left: 1.5em
     }
 	#toc .toc-text {
-	    color:#4CA0E4;
+	    color:#17bad8;
+		font-weight: 400;
 	}
     #toc .toc-text:hover {
 	    color:#fac22b;
