--- a/layout/_partial/ds-recent-comments.ejs
+++ b/layout/_partial/ds-recent-comments.ejs
@@ -41,11 +41,11 @@
         padding-left: 48px !important;
     }
 </style>
-<ul class="ds-recent-comments" id="ds-recent-comments" data-num-items="1" data-show-avatars="1" data-show-time="0" data-show-admin="0" data-excerpt-length="30" style="height:auto;width:240px;position:fixed;top:80px;right:140px;z-index:9999;display:none"></ul>
+<ul class="ds-recent-comments" id="ds-recent-comments" data-num-items="1" data-show-avatars="1" data-show-time="0" data-show-admin="1" data-excerpt-length="70" style="height:auto;width:240px;position:fixed;top:80px;right:140px;z-index:9999;"></ul>
 <!--多说js加载开始，一个页面只需要加载一次 -->
 <script type="text/javascript">
     var duoshuoQuery = {
-        short_name: "<%=theme.duoshuo_shortname%>"
+        short_name: "kiritor"
     };
     (function() {
         var ds = document.createElement('script');
