--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="baidu-site-verification" content="6fea7fc7276fc383ec5b2080c662f076"/>
+<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
   <%
   var title = page.title;
 
@@ -33,6 +34,8 @@
   <script src="http://kiritor.github.io/js/jquery1.8.2.min.js"></script>
   <script src="http://kiritor.github.io/js/jquery.nicescroll.js"></script>
   <script src="http://kiritor.github.io/js/jquery.qrcode.min.js"></script>
+  <script src="/js/search.js"></script>
   <script src="/js/ug-theme-default.js"></script>
   <script src="/js/unitegallery.js"></script>
+  <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 </head>
