--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,16 +1,12 @@
 <%- partial('_partial/head') %>
 <body>
-
   <div id="container">
     <div class="left-col">
     <%- partial('_partial/left-col', null, {cache: !config.relative_link}) %>
     </div>
     <div class="mid-col">
       <%- partial('_partial/mobile-nav', null, {cache: !config.relative_link}) %>
-	  <!--是否开启最近通知-->
-	  <% if(theme.recent){%>
-	  <%- partial('_partial/recent',null,{cache: !config.relative_link}) %>
-	  <% } %>
+	  <%- partial('_partial/page-header',null,{cache: !config.relative_link}) %>
       <div class="body-wrap"><%- body %></div>
       <!--<%- partial('_partial/footer') %>-->
     </div>
