--- a/source/css/_partial/main.styl
+++ b/source/css/_partial/main.styl
@@ -46,9 +46,9 @@
 		.overlay{
 			width: 100%;
 			height: 180px;
-			background-color: #000;
+			background-color: #fafafa;
 			position: absolute;
-			opacity: 0.7;
+			opacity: 1;
 		}
 
 		.intrude-less {
@@ -107,10 +107,10 @@
 			background: #88acdb;
 			border-radius: 50%;
 			border:0;
-			-webkit-transition: -webkit-transform 2s ease-out;
-			-moz-transition: -moz-transform 2s ease-out;
-			-o-transition: -o-transform 2s ease-out;
-			-ms-transition: -ms-transform 2s ease-out;
+			-webkit-transition: -webkit-transform 1s ease-out;
+			-moz-transition: -moz-transform 1s ease-out;
+			-o-transition: -o-transform 1s ease-out;
+			-ms-transition: -ms-transform 1s ease-out;
 		}
 
 		img:hover {
