--- a/layout/_partial/post/toc.ejs
+++ b/layout/_partial/post/toc.ejs
@@ -1,4 +1,4 @@
-<p class="toc-button">目录</p>
+<p class="toc-button" id="toc-button">目录</p>
 <div id="toc" class="toc-article" style="display:none;">
     <%- toc(post.content, {list_number: true}) %>
 </div>
